[gd_scene load_steps=4 format=3 uid="uid://njsujtljoo5q"]

[ext_resource type="Script" path="res://content/scripts/GameHUD.gd" id="1_kvj0f"]
[ext_resource type="Texture2D" uid="uid://bmce5in4pu4ai" path="res://content/graphics/icon.png" id="2_hbuh0"]
[ext_resource type="PackedScene" uid="uid://bpgtke26ub8cm" path="res://DiceMenu.tscn" id="2_jk70g"]

[node name="GameHUD" type="Node2D"]
visibility_layer = 512
z_index = 99
z_as_relative = false
texture_filter = 2
script = ExtResource("1_kvj0f")

[node name="DiceMenu" parent="." instance=ExtResource("2_jk70g")]
visible = false
position = Vector2(24, 552)
metadata/_edit_group_ = true

[node name="Logo" type="TextureRect" parent="."]
light_mask = 3
texture_filter = 1
offset_left = 776.0
offset_top = 8.0
offset_right = 824.0
offset_bottom = 56.0
texture = ExtResource("2_hbuh0")

[node name="UploadAssetButton" type="Button" parent="."]
texture_filter = 1
offset_left = 1480.0
offset_top = 832.0
offset_right = 1576.0
offset_bottom = 880.0
theme_override_font_sizes/font_size = 20
text = "Upload
asset"

[node name="LeaveGameButton" type="Button" parent="."]
texture_filter = 1
offset_left = 1480.0
offset_top = 16.0
offset_right = 1576.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 20
text = "Leave
game"

[node name="RollButton" type="Button" parent="."]
texture_filter = 1
offset_left = 24.0
offset_top = 640.0
offset_right = 120.0
offset_bottom = 688.0
theme_override_font_sizes/font_size = 20
text = "Roll"

[node name="LogTextBox" type="TextEdit" parent="."]
texture_filter = 1
offset_left = 24.0
offset_top = 704.0
offset_right = 448.0
offset_bottom = 832.0
editable = false
scroll_smooth = true

[node name="EnterTextBox" type="TextEdit" parent="."]
texture_filter = 1
offset_left = 24.0
offset_top = 848.0
offset_right = 448.0
offset_bottom = 880.0
theme_override_font_sizes/font_size = 20

[node name="LocalAssetSelectionDialog" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(800, 400)
ok_button_text = "Ã–ffnen"
dialog_hide_on_ok = true
file_mode = 1
access = 2

[node name="ResetTextTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AssetScrollContainer" type="ScrollContainer" parent="."]
texture_filter = 1
offset_left = 1480.0
offset_top = 80.0
offset_right = 1576.0
offset_bottom = 816.0

[node name="AssetListContainer" type="VBoxContainer" parent="AssetScrollContainer"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
alignment = 1

[node name="SpawnBlockTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="roll_dice" from="DiceMenu" to="." method="_on_RollDiceTunnel"]
[connection signal="pressed" from="UploadAssetButton" to="." method="_on_UploadAssetClick"]
[connection signal="pressed" from="LeaveGameButton" to="." method="_on_LeaveGameClick"]
[connection signal="pressed" from="RollButton" to="." method="_on_RollDiceClick"]
[connection signal="gui_input" from="EnterTextBox" to="." method="_on_ChatTextInput"]
[connection signal="confirmed" from="LocalAssetSelectionDialog" to="." method="_on_OnUploadAssetsSelConfirmed"]
[connection signal="files_selected" from="LocalAssetSelectionDialog" to="." method="_on_FilesSelected"]
[connection signal="timeout" from="ResetTextTimer" to="." method="_on_ChatTextTimerFire"]
